--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@
   width: 150px;
   height: 150px;
   border: 1px solid #ccc;
+  background-color: white;
   padding: 10px;
   margin: 10px;
   text-align: center;
@@ -20,13 +21,13 @@
 }
 
 nav {
-  background-color: #333;
+  background-color: white;
   padding: 10px;
   text-align: center;
 }
 
 .nav button {
-  background-color: #4CAF50;
+  background-color: #4287f5;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -36,5 +37,14 @@ nav {
 }
 
 .nav button:hover {
-  background-color: #45a049;
+  background-color: #82a9e8;
+}
+
+.h1 {
+
+}
+
+body {
+  background-color: #3ecfcc;
+  padding: 20px;
 }
